force-app/main/default/objects/Contact/fields/Notas_Preferencias__c.field-meta.xml
<CustomField>
    <fullName>Notas_Preferencias__c</fullName>
    <description>Campo NAO estruturado. E a materia-prima do matching por AI: o que os filtros nao capturam (rejeitou dois T2 por causa do andar, quer vista mas nao para a rua, precisa de garagem para dois carros).</description>
    <label>Notas e Preferências</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>