force-app/main/default/objects/Contact/fields/Orcamento_Max__c.field-meta.xml
<CustomField>
    <fullName>Orcamento_Max__c</fullName>
    <label>Orçamento Máximo</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>