force-app/main/default/objects/Contact/fields/Orcamento_Min__c.field-meta.xml
<CustomField>
    <fullName>Orcamento_Min__c</fullName>
    <label>Orçamento Mínimo</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>