force-app/main/default/objects/Contact/fields/Perfil_Comprador__c.field-meta.xml
<CustomField>
    <fullName>Perfil_Comprador__c</fullName>
    <label>Perfil de Comprador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Habitacao Propria</fullName><default>true</default><label>Habitação Própria</label></value>
            <value><fullName>Investimento</fullName><default>false</default><label>Investimento</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>