force-app/main/default/objects/Contact/fields/Procura_Zonas__c.field-meta.xml
<CustomField>
    <fullName>Procura_Zonas__c</fullName>
    <description>Zonas de interesse, separadas por virgula. Ex.: Matosinhos, Foz.</description>
    <label>Zonas Procuradas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>